Began creating Index page by using individual components from the other pages to create 80% of a full Index page. This is a quick solution to completing the Index page but will most likely change to avoid re-using too much content on the site.
Fixed the height issues on Services, using min-height rather than equilizer. I will get equilizer working eventually and remove the min-height.

--- a/src/assets/scss/components/_fonts.scss
+++ b/src/assets/scss/components/_fonts.scss
@@ -40,10 +40,11 @@ p, ul, ol{
 
 ul{
   list-style-type: square;
-}
 
-li{
-  margin-left: 1em;
+  li{
+    margin-left: 1em;
+    margin-bottom: 1em;
+  }
 }
 
 @media only screen and (max-width: 40em) { /* max-width 640px, mobile-only styles, use when QAing mobile issues */
